chore: mejoras en el frontend de la home page y las vistas generales
